--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
               </svg>
                     <span class="ml-3 text-xl">WAQAS AWAN</span>
                 </a>
-                <p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2020 WAQAS AWAN —
-                    <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@knyttneve</a>
+                <p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2020 TS TEAM —
+                    <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@TS</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
               <a class="text-gray-500">
